<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:stretchColumns="1"
    >    
    <TableRow>
    	<TextView  
		    android:layout_width="fill_parent" 
		    android:layout_height="wrap_content" 
		    android:text="@string/email"/>
		<EditText
			android:id="@+id/email"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"/>
    </TableRow>
    <TableRow>
    	<TextView  
		    android:layout_width="fill_parent" 
		    android:layout_height="wrap_content" 
		    android:text="@string/code"/>
		<EditText
			android:id="@+id/code"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"/>
    </TableRow>
    <TableRow>
    	<TextView  
		    android:layout_width="fill_parent" 
		    android:layout_height="wrap_content" 
		    android:text="@string/classNum"/>
		<EditText
			android:id="@+id/classNum"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"/>
    </TableRow>
    <TableRow>
    	android:orientation="vertical"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content">
    	<Button
	  		android:layout_width="wrap_content"
	  		android:layout_height="wrap_content"
	  		android:text="@string/login"/>
		<CheckBox
			android:id="@+id/rememberInfo"
			android:checked="false"
			android:text="@string/rememberInfo"/>
   	</TableRow>
</TableLayout>
